--- a/welcome-community.yaml
+++ b/welcome-community.yaml
@@ -4,22 +4,21 @@
 - type: embed
 
   embeds:
-    - title: Welcome to The Quilt Community
+    - title: Welcome to The Mando Xd Nation Community
 
       description: >
-        Welcome to The Quilt Community, the official community Discord server for The Quilt Project.
+        Welcome to The Mando Xd Nation Community, the official community Discord server for The Cuddles Project and many more.
 
 
-        The Quilt Project is an open-source, community-driven modding toolchain designed primarily for Minecraft.
-        By focusing on speed, ease of use and modularity, Quilt aims to provide a sleek and modern modding toolchain
-        with an open ecosystem.
+        The Cuddles Project is an open-source, community-driven bot toolchain designed primarily for Discord.
+        By focusing on speed, ease of use and modularity, we aim to provide a sleek and modern experience for all our
+        toolchain/collab servers and people who get chosen to use our bots.
 
 
-        Quilt is a project that was born out of a need for change in the Minecraft modding ecosystem. Our teams contain
-        many experienced members of the modding community, providing a level of familiarity that helps us to avoid the
+        This is a project that was born out of a need for change in the discord botting ecosystem. Our teams contain
+        many experienced members of the developing community, providing a level of familiarity that helps us to avoid the
         mistakes of the past – whether those mistakes relate to community management, diversity and inclusivity, project
-        governance or transparency. For more information on how we hope to do this,
-        [please see our "about" pages](https://quiltmc.org/about/).
+        governance or transparency.
 
 
         Before you get started, **please make sure to review our [rules](https://quiltmc.org/community) and
@@ -43,134 +42,89 @@
       Everyone is expected to read and abide by our [Code of Conduct](https://quiltmc.org/community/code-of-conduct)
       and [NSFW Content Policy](https://quiltmc.org/community/nsfw-policy/)
 
-    Follow Discord's rules: >
+    📜 Follow Discord's Community Guidelines and Terms of Service.: >
       As a Discord-based community, we require everyone to follow Discord's
       [Community Guidelines](https://discord.com/guidelines) and [Terms of Service](https://discord.com/terms)
 
-    Try to speak English: >
-      The common language in our community is English, but we understand that not everyone speaks English at the same
-      level. Try to speak English to the best of your ability, and don't worry if you need to use translation tools. We
-      will not tolerate making fun of people for poor English.
+    🏓 Do not ping people who don't want to be pinged!: >
+      Please if you do not want to be pinged just put X Ping in your server name or description, this would help our members
+      out a ton 💖
 
-    Listen to & respect all community team members: >
-      Please take requests from community team members seriously and listen when a team member asks you to do
-      something. If you have a problem with what a team member is asking you to do, we advise that you step away from
-      the situation and send a private message to another team member.
+    🌈 Respect different backgrounds and identities.: >
+      Don’t use slurs or offensive language or anything that may hurt people physically and/or mentally.
 
-    Keep all projects legal, legitimate & appropriate: >
-      We will not tolerate any projects that may break laws, breach a Terms of Service or an EULA, involve sexual
-      content, or that the moderators determine to be malicious or inappropriate.
+    🕊️ Communicate respectfully and patiently.: >
+      Do not escalate conflict and refer to @Moderators when necessary. Don’t be toxic or immature; sarcasm is not a toxicity permit.
 
-    Don’t spam: >
-      Don't spam our channels or users, and don't advertise your projects outside of the relevant showcase channels.
+    🚸 Keep it PG-13 and don’t post offensive content: >
+      To keep the server safe for all members, text, voice chat, emotes, and profiles should not contain:
+      NSFW (sexual / suggestive content / heavy gore, etc.).
+      Animal cruelty
+      Recreational substances (alcohol, recreational drugs, etc.)
+      Controversial or sensitive subjects
+      Potentially triggering themes (Light blood / gore, guns / firearms, etc.) – unless spoilered and labeled with content / trigger warnings
+      References to media with sexual or disturbing themes – profiles are okay for this one.
 
-    Respect our channels: >
-      Follow the given channel topic, and don't derail a discussion
+    🚦 Respect boundaries and privacy.: >
+      Don’t be parasocial; don’t put anyone on a pedestal or be overly familiar with people that don't know you.
+      If someone chooses not to answer a personal question for whatever reason, don’t keep asking it. Don’t share DMs publicly without permission.
 
-    When requesting help, specify your mappings: >
-      You must help us to help you, and it's important that you include as much information as you can with your help
-      request. We also recommend creating a thread for your help request, with your mappings in the thread name
-      (`MCP`, `MM`, `YM` or `QM`).
+    💞 Be supportive and welcoming.: >
+      All criticism must be constructive and given only when asked.
+      Instead of gatekeeping, be helpful towards newcomers, and make it known when you appreciate someone’s work. ❤️
 
-    Don't import drama or controversy from other communities: >
-      One of our most important rules - don't make things difficult for other users by bringing up controversies from
-      other communities.
+    🎨 Respect personal projects and creative work.: >
+      Don't pester developers (especially me) for bot updates or to make a custom one for you (they have their own lives!), steal art / steal code / etc. without permission, or use Ai (See below for more on our Ai policy!)
 
-- type: embed
+    🤖 Do not use generative AI content.: >
+      This is only because we want you to make art that is actually yours! Not ai generated or something like that. Please if you want to share something
+      made by ai, make sure to tell us. 🌟
 
-  text: '\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_'
+    🪩 Keep the server usable.: >
+      Read channel descriptions and follow channel-specific guidelines. Additionally:
+      Communicate in legible English only (no runes, zalgo text, screen reader inaccessible text).
+      Do not hoist your username or impersonate other users. If you have a custom font display name, please change your server display name to a readable one.
+      Don't talk over others/derail existing conversations (especially in VC and VC chats!).
+      Don't sleep in VCs.
 
-  embeds:
-    - title: Subjects to Avoid
-      color: 0x6C0000
+    🧹 Don’t spam.: >
+      Spam
+      Advertisements without permission
+      Size-changing videos, repost "memes" (ex. "Post this to another server", "Repost this to get a free cookie", etc.) and other generally obnoxious posts
+      Loud or eye-straining media – unless labelled with sound/eye-strain warnings
+      Excessive roleplay
+      Misinformation; you must have an up-to-date, reliable source for any information you share.
 
-      description: >
-        Sometimes, something begins trending or becoming popular, or an event happens in the community. We try to
-        allow for discussions to happen, but that isn't always possible. For that reason, we ask that you **do not post
-        or talk about the following things:**
+    ❤️‍🩹 Don’t vent publicly, especially regarding heavy themes.: >
+      We understand and empathise with how rough life is sometimes, but users are not professionals and are not qualified to help you.
+      If you ever find yourself struggling with mental health please contact a professional or the respective hotline of your country.
 
+    🤐 Please do not post anything personal about a member unless you have permission.: >
+      This includes: Images containing face/identity
+      Real life names
+      Where they live
+      What they like to do
+      How old they are.
 
-        **»** AI-generated "body horror" images - generated images of people, animals or faces that are disfigured or
-        look "wrong" in any way.
+    🍵 Take care of yourself and encourage healthy behaviour.: >
+      Don't make self-deprecating comments, and don't glorify or enable self-destructive behaviour (e.g. not sleeping/eating enough).
+      Do and speak what is best for yourself and others.
 
+    💌 Message manager is enabled.: >
+      Any messages sent, edited, and deleted are logged by xelA for moderation and debugging purposes, so please don't think you can send a silly message and then us moderators can't find out... because we can :P
 
-        **»** Anything relating to Mojang's Java Edition chat reporting features, including discussions relating to
-        potential exploits, or mods that make use of them. As an exception to this rule, you may discuss strategies
-        and mods for mitigating the usage of exploits on your servers, and good-faith mods that allow you to control
-        how chat reporting works on your servers.
-
-
-        This list will change over time, and we're equally likely to add or remove things as the way people approach
-        these subjects online changes.
-
-    - title: ModMail
-      color: 0xf54058
-
-      description: >
-        Instances of abusive, harassing, or otherwise unacceptable behavior may be reported to the Quilt Moderation Team
-        by privately messaging the <@836548129763098674> ModMail bot. This will open a private channel between you
-        and the Moderators.
-
-        You can also right-click (or long-tap on mobile) a message and select Apps > Report message to quickly forward
-        that message to the Moderators. The bot will prompt you to add more comments if you would like to.
-
-    - title: Community Artists
-
-      url: https://github.com/QuiltMC/art
-      color: 0x5865F2
-
-      description: >
-        We're lucky to have a few talented artists in our community:
-
-        **»** [**Arathain**](https://twitter.com/arathainfarqoe) - Creator of Pineapple-Chan, Quilt-Chan and a bunch of
-        related emotes
-
-        **»** [**Katto / Digital Whiskers**](https://digital-whiskers.carrd.co/) - Designed a banner and a few other
-        pieces
-
-        **»** [**Levi**](https://twitter.com/remote_getaway) - One of our Community Managers, has contributed many
-        banners and icons
-
-        We're very grateful to all of them for their amazing work! Don't hesitate to reach out to them if you'd like
-        to commission them for your own projects.
-
-    - title: Privacy Policies
-
-      color: 0x5865F2
-
-      description: By interacting with this server or by DMing the ModMail bot, you certify that you have read,
-        understood and agreed for your data to be processed under our [Privacy Policies](https://quiltmc.org/en/legal/).
-
-        For any question or request regarding your data, please contact us at privacy@quiltmc.org.
-
-- type: text
-  text: https://cdn.discordapp.com/attachments/863707104903561216/977162805373435925/forum-header-community.png
-
-- type: embed
-
-  embeds:
-    - title: The Quilt Forum
-
-      url: "https://forum.quiltmc.org"
-      color: 0x5865F2
-
-      description: >
-        This isn't our only social space - we believe that Discord isn't the best platform for long-form
-        discussions, and that important information should be available to people that aren't here.
-
-
-        If you're interested in long-form discussions, development help, news or community project, please feel free
-        to join our forum at [https://forum.quiltmc.org](https://forum.quiltmc.org)
+    📜 See https://discord.com/channels/1144564082234621994/1150406220646187058: >
+      This channel will provide more information on how to act on this server and what you can do with our members.
 
 - type: links
 
   title: Useful Links
 
   links:
-    Community Rules: https://quiltmc.org/community/rules
-    Discord Stats: https://stats-quilt.gserv.me/public/dashboard/9b181b97-bd7f-4ab0-87ed-3239f9149932
-    Newcomers' Guide: https://quiltmc.org/about/newcomer-guide/
-    QuiltMC Forum: https://forum.quiltmc.org
-    QuiltMC on GitHub: https://github.com/QuiltMC
-    QuiltMC Website: https://quiltmc.org/
-    Toolchain Server (defunct): https://discord.gg/afZYcQpbwv
+    Information: https://discord.com/channels/1144564082234621994/1150406220646187058
+    Discord Status: https://discordstatus.com/
+    Support me!: https://ko-fi.com/gabe_real
+    Gabe_Real on GitHub: https://github.com/Gabe-Real
+    Gabe_Real Website: https://gabereal.co.uk
+    Supporter server: https://discord.gg/hSbmfqYqA2
+    Collab server: https://discord.gg/voidbound
